Implemented new uploading method
